# fakenews

./: .dockerignore  .gitignore  DESARROLLO.md  Dockerfile  README.md  debug_extraction.py  error_en_kaggle.txt  logs_en_kaggle.txt  proyecto-dl.txt  pyproject.toml  requirements.txt  run_app.py  test_api.py  test_rag.py  test_step8.py
build_kaggle/fake-news-src/: dataset-metadata.json
build_kaggle/fake-news-workspace/: dataset-metadata.json
build_kaggle/kernel/: kernel-metadata.json  train.ipynb
data/: load_datasets.py
models/: best_hyperparameters.json
models/baseline/: eval_results.json  metrics.json  model.safetensors
models/deberta_lora/: README.md  adapter_config.json  adapter_model.safetensors  metrics.json
models/rag_index/: faiss.index  index_info.json  metadata.json
models/weighted/: eval_results.json  metrics.json  model.safetensors
src/: config.py  testing.py
src/api/: main.py
src/data/: load_datasets.py
src/explainability/: explainers.py
src/extraction/: article_extractor.py
src/inference/: calibrate_threshold.py  model_utils.py  pipeline.py  pipeline_rag_only.py  predict.py
src/preprocessing/: build_hf_datasets.py  clean_text.py  split_data.py
src/rag/: rag_pipeline.py
src/schemas/: request.py  response.py
src/training/: evaluate_deberta_lora.py  optimize_hyperparameters.py  train_baseline.py  train_deberta_lora.py  train_weighted.py
src/ui/: formatters.py  gradio_app.py  gradio_config.py  html_generators.py  input_validators.py
src/utils/: logger.py
tests/integration/: test_api.py
tools/: deploy_to_kaggle.py
(+50 files in other folders)
