[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fake_news_detection"
version = "0.1.0"
description = "A fake news detection system using DeBERTa and RAG"
authors = [
  { name = "User", email = "user@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "gradio",
    "torch",
    "transformers",
    "peft",
    "datasets",
    "scikit-learn",
    "newspaper3k",
    "sentence-transformers",
    "faiss-cpu",
    "google-search-results",
    "beautifulsoup4",
    "requests",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "black",
    "mypy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
